tests/paczka2/big_fuzzy/96495520.err
Error in line 2: cqNZUK S377 74,5
Error in line 4: fh9lfM S377 8,0
Error in line 13: cqNZUK S564 -1,7
Error in line 12: cqNZUK S564 6,5
Error in line 15: cqNZUK A603 94,4
Error in line 16: cqNZUK A895 37,2
Error in line 17: cqNZUK S377 47,6
Error in line 7: fh9lfM A895 7,7
Error in line 22: fh9lfM S564 27,2
Error in line 3: A603 A895 122,2
Error in line 26: A603 S564 8,1
Error in line 27: A603 A895 54,4
Error in line 25: fh9lfM S377 32,7
Error in line 32: fh9lfM S564 85,9
Error in line 43: oFxSpXSy4O S564 32,0
Error in line 44: xHGIqb S564 68,9
Error in line 55: fh9lfM A603 29,3
Error in line 58: oFxSpXSy4O S564 23,39
Error in line 56: fh9lfM S564 22,1
Error in line 54: xHGIqb A603 2,9
Error in line 60: xHGIqb A895 29,2
Error in line 47: oFxSpXSy4O A603 57,9
Error in line 67: uNUZQ S564 74,3
Error in line 24: uNUZQt S377 381,6
Error in line 76: cqNZUK S377 63,0
Error in line 70: A603 A895 32,8
Error in line 82: cN5iLO A603 56,4
Error in line 66: oFxSpXSy4O S564 74,3
Error in line 113: A603 A895 59,51
Error in line 115: A603 A895 278,4
Error in line 114: cN5iLO S377 723,4
Error in line 139: cqNZUK A895 -1,9
Error in line 120: oFxSpXSy4O A603 13,4
Error in line 130: cqNZUK A895 7,9
Error in line 141: oFxSpXSy4O A895 83,0
Error in line 148: xHGIqb S564 126,3
Error in line 154: oFxSpXSy4O S564 31,7
Error in line 167: cN5iLO S564 34,9
Error in line 168: oFxSpXSy4O S377 11,4
Error in line 146: cqNZUK A603 14,9
Error in line 180: uNUZQt S564 94,1
Error in line 190: fh9lfM A603 77,73
Error in line 191: fh9lfM S564 49,7
Error in line 195: fh9lfM S377 89,3
Error in line 200: xHGIqb A895 43,9
Error in line 196: oFxSpXSy4O A895 111,1
Error in line 214: uNUZQt A603 86,6
Error in line 213: cqNZUK A895 50,6
Error in line 229: xHGIqb S377 87,9
Error in line 224: cqNZUK A603 89,5
Error in line 230: xHGIqb S564 11,0
Error in line 234: xHGIqb S377 43,3
